--- a/index.html
+++ b/index.html
@@ -8,39 +8,284 @@
     <title>CocoritaDecoHogar</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+        integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="./ccs/estilos.css">
 </head>
 
 <body>
-        <!-- <div class="contenedor">
-            <div class="box1"> -->
-<!-- HEADER-NAVBAR ----------------------------------------------------------------------------------------->
-<header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
-        <a class="navbar-brand" href="#">Cocorita <span>Deco-Hogar</span></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav justify-content-end w-100">
-            <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-link" href="#">Features</a>
-            <a class="nav-link" href="#">Pricing</a>
-            <a class="nav-link disabled">Disabled</a>
-          </div>
-        </div>
-      </nav>   
-    </header>
-    <!-- CUERPO DE LA WEB ----------------------------------------------------------------------------------->
-    <main class="container-fluid">
-    <!-- BANNER --------------------------------------------------------------------------------------------->
-<section>
+    <!-- HEADER-NAVBAR ----------------------------------------------------------------------------------------->
+    <nav class="navbar navbar-expand-md  navbar-dark">
+        <!-- Brand -->
+        <a class="logoNav navbar-brand" href="#">Cocorita Deco-Hogar</a>
 
+        <!-- Toggler/collapsibe Button -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- Navbar links -->
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <ul class="navbar-nav justify-content-end w-100">
+                <li class="nav-item ">
+                    <a class="nav-link" href="./index.html">Inicio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./pages/productos.html">Productos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./pages/ingresar.html">Ingresar</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <!-- BANNER --------------------------------------------------------------------------------------------->
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <h1 class="text-center">Tienda Online</h1>
+        <article class="text-center">
+            <p>Envíos a todo el país</p>
+            <p>Compra mínima $3000</p>
+            <p>Sin mínimo por productos</p>
+            <button type="button" class="btn btn-secondary"> Ir a Productos</button>
+        </article>
+        </div>
+    </div>
+    <!-- PRODUCTOS --------------------------------------------------------------------------------------->
+
+    <h2>Productos</h2>
+    <!-- CAROUSEL--------------------------------------------------------------------------------------- -->
+    <div class="container-fluid">
+        <div class="productos-fila">
+        <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
+                <li data-target="#carouselExampleCaptions" data-slide-to="4"></li>
+                <li data-target="#carouselExampleCaptions" data-slide-to="5"></li>
+            </ol>
+            <div class="container carousel-inner">
+                <div class="carousel-item active">
+                    <img src="./img/galeria-index/img1.jpeg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Cocina</h5>
+                        <p>“La cocina de autor es poner tu personalidad en lo que haces y ese sentimiento la convierte en algo distinto.”</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="./img/galeria-index/img2.jpeg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Dormitorio</h5>
+                        <p>"Sueña en grande mientras duermes, y aún más grande cuando estás despierto"</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="./img/galeria-index/img3.jpeg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Living</h5>
+                        <p>"Cree en ti y todo será posible"</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="./img/galeria-index/img4.jpeg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Baño</h5>
+                        <p>"Cree en ti y todo será posible"</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="./img/galeria-index/img5.jpeg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Sala de Estudio</h5>
+                        <p>"Cree en ti y todo será posible"</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="./img/galeria-index/img6.jpeg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Jardin/Exterior</h5>
+                        <p>"Cree en ti y todo será posible"</p>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-target="#carouselExampleCaptions" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-target="#carouselExampleCaptions" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </button>
+        </div>
+    </div>
+    </div>
+    
+<!-- BOTONES MEDIO DE PAGO -->
+<section class="row">
+    <div class="botonesMedioPago justify-content-center">
+    <button type="button" class="btn btn-outline-secondary">Tarjetas de Débito</button>
+    <button type="button" class="btn btn-outline-secondary">Tarjetas de Crédito</button>
+    <button type="button" class="btn btn-outline-secondary">Transferencias Bancarias</button>
+    <button type="button" class="btn btn-outline-secondary">Efectivo</button>
+</div>
 </section>
 
-    </main>
-                <!-- </div>
+<!-- MINI FORMULARIO----------------------------------------------------------------------------- -->
+<section id="formCatalogo" class="my-5">
+<div class="row p-4 shadow p-3 mb-5 bg-body rounded">
+<article class="col-12 col-lg-8 ">
+<h3 class="text-lg-start text-md-start">Recibí nuestro Catálogo Online</h3>
+<p class="mt-3 text-lg-start">Ingresa tu mail para que podamos enviarte mensualmente nuestro 
+    catalogo online con todas las novedades, y puedas hacer tus pedidos de una forma mas sencilla.</p>
+
+<form action="" class="row">
+<div class="mb-3 col-4">
+    <label for="email-usuario" class="form-label">Email</label>
+    <input type="text" class="form-control" id="mailUsuario" placeholder="Nombre">
+</div>
+<div class="mb-3 col-4">
+    <label for="exampleFormControlInput1" class="form-label">Email</label>
+    <input type="email" class="form-control" id="mailUsuario" placeholder="nombre@ejemplo.com">
+</div>
+<div class="mb-3 col-12">
+<input type="submit" name="" id="" value="Enviar" class="btn btn-secondary">
+</div>
+</form>
+</article>
+<section class="col-lg-4">
+<img src="./img/nosotros/Nosotros1.png" alt="">
+</section>
+
+</div>
+</section>
+<!-- FOOTER-------------------------------------------------------------------------------- -->
+<footer>
+    <div>
+        <h1 class="tituloFooter">Cocorita Deco-Hogar</h1>
+    </div>
+    <section class="container-fluid">
+        <div class="row">
+    <article class="redesSociales col-12 text-center h4">
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-whatsapp"></i>
+    </article>
+</div>
+<div class="row">
+<section class="col-3">
+    <ul class="listaFooter">
+        <li>
+            <a class="nav-link" href="./index.html">Inicio</a>
+        </li>
+        <li>
+            <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
+        </li>
+        <li>
+            <a class="nav-link" href="./pages/productos.html">Productos</a>
+        </liclass=>
+        <li>
+            <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+        </liclass=>
+        <li>
+            <a class="nav-link" href="./pages/ingresar.html">Ingresar</a>
+        </li>
+    </ul> 
+</section> 
+    <article class="col-3 align-self-stretch bd-highlight">
+    <h4 class=" font-weight-lighter">Suscríbete para recibir todas las novedades</h4>
+</article>
+<div class="mb-3 col-3 align-self-stretch bd-highlight">
+    
+    <input type="email" class="form-control" id="mailUsuario" placeholder="nombre@ejemplo.com">
+</div>
+<div class="mb-3 col-1 align-self-stretch bd-highlight">
+<input type="submit" name="" id="" value="Enviar" class="btn btn-secondary">
+</div>
+</section>
+    </footer>
+
+
+
+
+
+
+
+<!-- <div class="cajaFormulario">
+    <form>
+        <label for="nombre-usuario"></label>
+        <input type="text" name="nombre-usuario" placeholder="Nombre" required><br><br>
+
+        <label for="apellido-usuario"></label>
+        <input type="text" name="apellido-usuario" placeholder="Apellido" required><br><br>
+
+        <label for="genero">Género</label><br><br>
+        <input type="radio" name="genero-usuario" value="Hombre">
+
+        <label for="Hombre">Hombre</label>
+        <input type="radio" name="genero-usuario" value="Mujer">
+        <label for="mujer">Mujer</label>
+        <input type="radio" name="genero-usuario" value="Prefiero no responder">
+        <label for="prefiero no responder">Prefiero no responder</label><br><br>
+
+        <label for="numerodetelefono-usuario"></label>
+        <input type="number" placeholder="Telefono"><br><br>
+
+        <label for="email-usuario"></label>
+        <input type="email" placeholder="Mail" required><br><br>
+
+        <label for="medio-contacto">Por cual medio te gustaria que nos contactemos</label>
+        <select name="medio-contacto" id="">
+            <option value="whatsapp">Whatsapp</option>
+            <option value="mail">Mail</option>
+
+            <textarea name="escribe tu mensaje" id="form" cols="30" rows="10"
+                placeholder="Escribe tu mensaje" required></textarea><br>
+            <input type="submit" value="Enviar"><br><br>
+    </form>
+</div> -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- <div class="row contenedorBanner">
+        <div class="col-4tituloBanner">
+            <p class="tituloBanner">Tienda Online</p>
+        </div>
+        <div class="col-4textoBanner">
+            <p class="textoBanner">Envíos a todo el país</p>
+            <p class="textoBanner">Compra mínima $3000</p>
+            <p class="textoBanner">Sin mínimo por productos</p>
+        </div>
+        <div class="row">
+            <button class="col-4 animate__animated animate__pulse"> Ingresar</button>
+        </div>
+    </div> -->
+
+
+
+    <!-- </div>
             </div>
             <div class="box3">
                 <div class="contenedorBanner">
@@ -180,8 +425,15 @@
             </div>
         </div>
     </main> -->
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
+        integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous">
+    </script>
 </body>
+
 </html>
