--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,115 +8,183 @@
     <title>CocoritaDecoHogar</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+        integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="../ccs/estilos.css">
 </head>
 
 <body>
-    <main>
-        <div class="contenedor">
-            <div class="box1">
-<header>
-            
-                <div class="header">
-                    <div class="logo">
-                        <p>Cocorita <span>Deco-Hogar</span></p>
-                    </div>
+    <!-- HEADER-NAVBAR ----------------------------------------------------------------------------------------->
+    <nav class="navbar navbar-expand-md  navbar-dark">
+        <!-- Brand -->
+        <a class="navbar-brand" href="#">Cocorita Deco-Hogar</a>
+
+        <!-- Toggler/collapsibe Button -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- Navbar links -->
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <ul class="navbar-nav justify-content-end w-100">
+                <li class="nav-item ">
+                    <a class="nav-link" href="../index.html">Inicio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../pages/nosotros.html">Nosotros</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../pages/productos.html">Productos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../pages/ingresar.html">Ingresar</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <!-- informacion contacto------------------------------------------------------------------------------- -->
+    <h2>Contactate con Nosotros</h2>
+    <article class="pContacto">
+        <p class="pContacto">No dudes en realizar tu consulta por cualquier medio de contacto, o tambien podes
+            acercarte a nuestro showroom, estaremos atentos siempre para brindarte la mejor atención</p>
+    </article>
+
+    <div class="container contacto rounded">
+        <div class="row">
+        <div class="col-lg-6 col-md-6 col-sm-12 ">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13510.503317243507!2d-63.900046680468506!3d-32.16039464859834!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95cd124847d57709%3A0x1fe921fa9bc4d823!2sVilla%20Ascasubi%2C%20C%C3%B3rdoba!5e0!3m2!1ses!2sar!4v1648420464435!5m2!1ses!2sar"
+                width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <div class=" col-lg-6 col-md-6 col-sm-12  text-center">
+            <strong> Direccion:</strong><p> Villa Ascasubi </p>
+            <strong> Horarios de Atención:</strong><p>Lunes a Viernes de 08:00 hs a 13:00 hs</p>
+            <strong> Teléfono:</strong><p>03571-15614756</p>
+            <strong> Mail:</strong><p>carogonzalez722@gmail.com</p>
+        </div>
+    </div>
+    </div>
+  <!--  -->
+    <!-- Formulario-------------------------------------------------------------------------------------------- -->
+    <div class="subtituloContacto">
+        <h2 class="subtituloConsultanos">Dejanos tu consulta</h2>
+    </div>
+    <div class="container form">
+        <div class="form-group">
+            <label for="usr">Nombre:</label>
+            <input type="text" class="form-control" id="usr">
+        </div>
+        <div class="form-group">
+            <label for="usr">Apellido:</label>
+            <input type="text" class="form-control" id="usr">
+        </div>
+        <div class="form-group">
+            <label for="usr">Género:</label>
+        </div>
+        <div class="form-group">
+            <div class="form-check-inline">
+                <label class="form-check-label">
+                    <input type="radio" class="form-check-input" name="optradio">Mujer
+                </label>
+            </div>
+            <div class="form-check-inline">
+                <label class="form-check-label">
+                    <input type="radio" class="form-check-input" name="optradio">Hombre
+                </label>
+            </div>
+            <div class="form-check-inline">
+                <label class="form-check-label">
+                    <input type="radio" class="form-check-input" name="optradio">Prefiero no responder
+                </label>
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="usr">Numero de Teléfono:</label>
+            <input type="number" class="form-control" id="usr">
+        </div>
+        <div class="form-group">
+            <label for="usr">Mail:</label>
+            <input type="email" class="form-control" id="usr">
+        </div>
+        <div class="form-group">
+            <label for="sel1">Te contactamos por:</label>
+            <select class="form-control" id="sel1">
+                <option>Whatsapp</option>
+                <option>Mail</option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label for="comment">Escribi tu consulta:</label>
+            <textarea class="form-control" rows="5" id="comment"></textarea>
+        </div>
+        <button type="submit" class="btn btn-secondary">Enviar</button>
+    </div>
+
+    
+    <div class="iconoWp">
+        <a
+            href="https://api.whatsapp.com/send/?phone=%2B5493571614756&text=Hola!%20Quiero%20realizar%20una%20consulta%20por%20el%20producto%20...&app_absent=0"><img
+                src="../img/iconowp/wplogo.png" alt="Icono de Whatsapp" height="40px"></a>
+    </div>
+
+    <footer>
+        <div>
+            <h1 class="tituloFooter">Cocorita Deco-Hogar</h1>
+        </div>
+        <section class="container-fluid">
+            <div class="row">
+                <article class="redesSociales col-12 text-center h4">
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-whatsapp"></i>
+                </article>
+            </div>
+            <div class="row">
+                <section class="col-3">
+                    <ul class="listaFooter">
+                        <li>
+                            <a class="nav-link" href="./index.html">Inicio</a>
+                        </li>
+                        <li>
+                            <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
+                        </li>
+                        <li>
+                            <a class="nav-link" href="./pages/productos.html">Productos</a>
+                            </liclass=>
+                        <li>
+                            <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                            </liclass=>
+                        <li>
+                            <a class="nav-link" href="./pages/ingresar.html">Ingresar</a>
+                        </li>
+                    </ul>
+                </section>
+                <article class="col-3 align-self-stretch bd-highlight">
+                    <h4 class=" font-weight-lighter">Suscríbete para recibir todas las novedades</h4>
+                </article>
+                <div class="mb-3 col-3 align-self-stretch bd-highlight">
+
+                    <input type="email" class="form-control" id="mailUsuario" placeholder="nombre@ejemplo.com">
                 </div>
-            </div>
-            <div class="box2">
-
-                <div class="barra">
-                    <nav>
-                        <ul>
-                            <li><a href="../index.html" >Inicio</a></li>
-                            <li><a href="../pages/nosotros.html">Nosotros</a></li>
-                            <li><a href="../pages/productos.html">Productos</a></li>
-                            <li><a href="../pages/contacto.html">Contacto</a></li>
-                            <li><a href="../pages/ingresar.html">Ingresar</a></li>
-                        </ul>
-                    </nav>
-                </header>
+                <div class="mb-3 col-1 align-self-stretch bd-highlight">
+                    <input type="submit" name="" id="" value="Enviar" class="btn btn-secondary">
                 </div>
-            </div>
-        <div class="box3">
-            <div class="contenedorContacto">
-                <div class="tituloContacto">
-            <h1 class="tituloContacto">Contacto</h1><br><br>
-        </div>
-            <div class="pContacto">
-                <p class="pContacto">No dudes en realizar tu consulta por cualquier medio de contacto, o tambien podes
-                    acercarte a nuestro showroom, estaremos atentos siempre para brindarte la mejor atención</p>
-            </div><br><br>
-            <div class="informacionContacto">
-                <div>
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13510.503317243507!2d-63.900046680468506!3d-32.16039464859834!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95cd124847d57709%3A0x1fe921fa9bc4d823!2sVilla%20Ascasubi%2C%20C%C3%B3rdoba!5e0!3m2!1ses!2sar!4v1648420464435!5m2!1ses!2sar"
-                    width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>
-                <div>
-                <p> Villa Ascasubi</p><br>
-                <strong> Horarios de Atención:</strong> Lunes a Viernes de 08:00 hs a 13:00 hs <br><br>
-                <strong> Teléfono:</strong>03571-15614756<br><br>
-                <strong> Mail:</strong> carogonzalez722@gmail.com
-            </div>
-            </div>
-            <div class="subtituloContacto">
-            <h2 class="subtituloConsultanos">Consultanos</h2>
-        </div>
-            <div class="cajaFormulario">
-                <form>
-                    <label for="nombre-usuario"></label>
-                    <input type="text" name="nombre-usuario" placeholder="Nombre" required><br><br>
-
-                    <label for="apellido-usuario"></label>
-                    <input type="text" name="apellido-usuario" placeholder="Apellido" required><br><br>
-
-                    <label for="genero">Género</label><br><br>
-                    <input type="radio" name="genero-usuario" value="Hombre">
-
-                    <label for="Hombre">Hombre</label>
-                    <input type="radio" name="genero-usuario" value="Mujer">
-                    <label for="mujer">Mujer</label>
-                    <input type="radio" name="genero-usuario" value="Prefiero no responder">
-                    <label for="prefiero no responder">Prefiero no responder</label><br><br>
-
-                    <label for="numerodetelefono-usuario"></label>
-                    <input type="number" placeholder="Telefono"><br><br>
-
-                    <label for="email-usuario"></label>
-                    <input type="email" placeholder="Mail" required><br><br>
-
-                    <label for="medio-contacto">Por cual medio te gustaria que nos contactemos</label>
-                    <select name="medio-contacto" id="">
-                        <option value="whatsapp">Whatsapp</option>
-                        <option value="mail">Mail</option>
-
-                        <textarea name="escribe tu mensaje" id="form" cols="30" rows="10"
-                            placeholder="Escribe tu mensaje" required></textarea><br>
-                        <input type="submit" value="Enviar"><br><br>
-                </form>
-            </div>
-            </div>
-
-            <div class="iconoWp">
-                <a
-                    href="https://api.whatsapp.com/send/?phone=%2B5493571614756&text=Hola!%20Quiero%20realizar%20una%20consulta%20por%20el%20producto%20...&app_absent=0"><img
-                        src="../img/iconowp/wplogo.png" alt="Icono de Whatsapp" height="40px"></a>
-            </div>
-        </div>
-            <div class="box4">
-            <footer>
-                <i class="fa-brands fa-facebook"></i>
-                <i class="fa-brands fa-instagram"></i>
-                <i class="fa-brands fa-twitter"></i>
-                <i class="fa-brands fa-whatsapp"></i>
-                <br>
-
-                <p>Autora:Carolina Gonzalez</p>
-                <p class="derechos"> 2022 Todos los derechos reservados</p>
-            </footer>
-        </div>
+        </section>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
+        integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
