--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -1,105 +1,143 @@
 <!DOCTYPE html>
 <html lang="es">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CocoritaDecoHogar</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <link rel="stylesheet" href="../ccs/estilos.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>CocoritaDecoHogar</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+            integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+        <link rel="stylesheet" href="../ccs/estilos.css">
+    </head>
 
 <body>
-    <main>
-        <div class="contenedor">
-            <div class="box1">
-<header>
-            
-                <div class="header">
-                    <div class="logo">
-                        <p>Cocorita <span>Deco-Hogar</span></p>
-                    </div>
-                </div>
-            </div>
-            <div class="box2">
+    <!-- HEADER-NAVBAR ----------------------------------------------------------------------------------------->
+    <nav class="navbar navbar-expand-md  navbar-dark">
+        <!-- Brand -->
+        <a class="navbar-brand" href="#">Cocorita Deco-Hogar</a>
 
-                <div class="barra">
-                    <nav>
-                        <ul>
-                            <li><a href="../index.html">Inicio</a></li>
-                            <li><a href="../pages/nosotros.html">Nosotros</a></li>
-                            <li><a href="../pages/productos.html">Productos</a></li>
-                            <li><a href="../pages/contacto.html">Contacto</a></li>
-                            <li><a href="../pages/ingresar.html">Ingresar</a></li>
-                        </ul>
-                    </nav>
-                </header>
-                </div>
-            </div>
-            <div class="box3">
-            <div class="contenedorNos">
-                <div>
-                    <img src="../img/nosotros/Nosotros1.png" alt="">
-                </div>
-                <div>
-                <h1 class="animate__animated animate__fadeInDown">Bienvenidos</h1>
-            </div>
-            <div>
-                <p class="animate__animated animate__fadeInLeft">A nuestro pequeño sueño...</p>
-            </div>
-            </div>
-            <article>
-                <!-- <img src="../img/Nosotros/Nosotros1.png" alt="foto donde muestra imagenes abstractas y
-            los textos hola y te contamos de nosotros" class="imgNosotros">
-            </article> -->
-            <h2 class="centrar">Nuestra Historia</h2>
-            <article>
-                <p class="textoNosotros animate__animated animate__fadeInUp">
+        <!-- Toggler/collapsibe Button -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- Navbar links -->
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <ul class="navbar-nav justify-content-end w-100">
+                <li class="nav-item ">
+                    <a class="nav-link" href="../index.html">Inicio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../pages/nosotros.html">Nosotros</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../pages/productos.html">Productos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../pages/ingresar.html">Ingresar</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+<section class="container">
+    <div class="row">
+    <h2 class="aling-center col-6 parrafoNosotros">Nuestra Historia</h2>
+            <article class=" col-6">
+                <p>
                     Hola a todos, somos Damián y Carolina y estamos orgullosos de presentar nuestro proyecto "Cocorita
                     Deco-Hogar". Comenzamos en el años 2019 realizando compras por pedido y luego comenzamos a contar
                     con stock,
                     para que nuestros clientes pudieran obtener de manera mas agil sus productos. Estamos siempre en
                     movimiento y entendemos la dinámica de nuestro país. Por eso basamos nuestra filosofía de trabajo en
                     desarrollar negocios a la par de nuestros clientes, ofreciendo un catálogo que incluyen productos
-                    de: </p>
-                <ul class="listaNosotros">
+                    de:
+                </p>
+                <ul>
                     <li> Objetos de diseño</li>
                     <li> Productos originales</li>
                     <li> Accesorios personalizados</li>
                 </ul><br><br>
 
             </article>
-            <h2 class="centrar">Nuestro Objetivo</h2><br>
-            <article>
-                <p class="textoNosotros">
+            <h2 class="col-6">Nuestro Objetivo</h2><br>
+            <article class="col-6">
                     Nuestro objetivo es desarrollar un estilo de venta en el cuales los beneficiados siempre sean
                     nuestros clientes, diferenciándonos, no sólo por la calidad de nuestros productos, sino también por
                     la velocidad en la entrega.
                     Para lograrlo trabajamos enérgicamente en mantener siempre actualizado el stock.
                 </p>
-            </article><br><br>
+            </article>
+        </div>
+        </section>
             <div class="iconoWp">
                 <a
                     href="https://api.whatsapp.com/send/?phone=%2B5493571614756&text=Hola!%20Quiero%20realizar%20una%20consulta%20por%20el%20producto%20...&app_absent=0"><img
                         src="../img/iconowp/wplogo.png" alt="Icono de Whatsapp" height="40px"></a>
             </div>
             </div>
-            <div class="box4">
-            <footer>
-                <i class="fa-brands fa-facebook"></i>
-                <i class="fa-brands fa-instagram"></i>
-                <i class="fa-brands fa-twitter"></i>
-                <i class="fa-brands fa-whatsapp"></i>
-                <br>
-
-                <p>Autora:Carolina Gonzalez</p>
-                <p class="derechos"> 2022 Todos los derechos reservados</p>
-            </footer>
-            </div>
+           <!-- FOOTER-------------------------------------------------------------------------------- -->
+<footer>
+    <div>
+        <h1 class="tituloFooter">Cocorita Deco-Hogar</h1>
+    </div>
+    <section class="container-fluid">
+        <div class="row">
+    <article class="redesSociales col-12 text-center h4">
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-whatsapp"></i>
+    </article>
+</div>
+<div class="row">
+<section class="col-3">
+    <ul class="listaFooter">
+        <li>
+            <a class="nav-link" href="./index.html">Inicio</a>
+        </li>
+        <li>
+            <a class="nav-link" href="../pages/nosotros.html">Nosotros</a>
+        </li>
+        <li>
+            <a class="nav-link" href="../pages/productos.html">Productos</a>
+        </liclass=>
+        <li>
+            <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+        </liclass=>
+        <li>
+            <a class="nav-link" href="../pages/ingresar.html">Ingresar</a>
+        </li>
+    </ul> 
+</section> 
+    <article class="col-3 align-self-stretch bd-highlight">
+    <h4 class=" font-weight-lighter">Suscríbete para recibir todas las novedades</h4>
+</article>
+<div class="mb-3 col-3 align-self-stretch bd-highlight">
     
+    <input type="email" class="form-control" id="mailUsuario" placeholder="nombre@ejemplo.com">
+</div>
+<div class="mb-3 col-1 align-self-stretch bd-highlight">
+<input type="submit" name="" id="" value="Enviar" class="btn btn-secondary">
+</div>
+</section>
+    </footer>
 
+
+        <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+        </script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+            integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+        </script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
+            integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous">
+        </script>
 </body>
 
 </html>
